# vlm-bench

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: benchmark.yaml  default.yaml  rocm_optimized.yaml
docs/: architecture.md  benchmarks.md  rocm_setup.md
scripts/: download_models.py  profile_memory.py  run_benchmark.py
src/vlm_bench/: __init__.py  cli.py  config.py
src/vlm_bench/backends/: __init__.py  base.py  pytorch_backend.py  rocm_backend.py
src/vlm_bench/benchmark/: __init__.py  metrics.py  runner.py
src/vlm_bench/data/: __init__.py  dataset.py
src/vlm_bench/models/: __init__.py  base.py  factory.py  internvl.py  llava.py
src/vlm_bench/server/: __init__.py  app.py  schemas.py
src/vlm_bench/utils/: distributed.py  logging.py  memory.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_models.py
